JumpScript/tests/baselines/reference/initializerReferencingConstructorParameters.errors.txt
tests/cases/conformance/classes/propertyMemberDeclarations/initializerReferencingConstructorParameters.jump(4,9): error TS2304: Cannot find name 'x'.
tests/cases/conformance/classes/propertyMemberDeclarations/initializerReferencingConstructorParameters.jump(5,15): error TS2304: Cannot find name 'x'.
tests/cases/conformance/classes/propertyMemberDeclarations/initializerReferencingConstructorParameters.jump(10,9): error TS2663: Cannot find name 'x'. Did you mean the instance member 'this.x'?
tests/cases/conformance/classes/propertyMemberDeclarations/initializerReferencingConstructorParameters.jump(11,15): error TS2304: Cannot find name 'x'.
tests/cases/conformance/classes/propertyMemberDeclarations/initializerReferencingConstructorParameters.jump(17,15): error TS2304: Cannot find name 'this'.
tests/cases/conformance/classes/propertyMemberDeclarations/initializerReferencingConstructorParameters.jump(23,9): error TS2663: Cannot find name 'x'. Did you mean the instance member 'this.x'?


==== tests/cases/conformance/classes/propertyMemberDeclarations/initializerReferencingConstructorParameters.jump (6 errors) ====
    // Initializer expressions for instance member variables are evaluated in the scope of the class constructor body but are not permitted to reference parameters or local variables of the constructor. 
    
    class C {
        a = x; // error
            ~
!!! error TS2304: Cannot find name 'x'.
        b: typeof x; // error
                  ~
!!! error TS2304: Cannot find name 'x'.
        constructor(x) { }
    }
    
    class D {
        a = x; // error
            ~
!!! error TS2663: Cannot find name 'x'. Did you mean the instance member 'this.x'?
        b: typeof x; // error
                  ~
!!! error TS2304: Cannot find name 'x'.
        constructor(public x) { }
    }
    
    class E {
        a = this.x; // ok
        b: typeof this.x; // error
                  ~~~~
!!! error TS2304: Cannot find name 'this'.
        constructor(public x) { }
    }
    
    class F<T> {
        a = this.x; // ok
        b = x; // error
            ~
!!! error TS2663: Cannot find name 'x'. Did you mean the instance member 'this.x'?
        constructor(public x: T) { }
    }